@@ -31,6 +31,7 @@ CAY-2078 Client code gen bug. Unnecessary DataMap class generation setting datam
 CAY-2080 Cayenne doesn't pick up reverse engineering file changes
 CAY-2084 ObjectIdQuery - no cache access polymorphism
 CAY-2086 SelectById.selectFirst stack overflow
+CAY-2087 PostCommitFilter is confused about changes made by Pre* listeners
 
 ----------------------------------
 Release: 4.0.M3
